# OpENer_EnIP_KC868A16

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
Notes/: pinconfig.md  pinconfig.txt
components/esp_netif/: esp_netif_handlers.c
components/i2c_manager/: CMakeLists.txt  i2c_manager.c
components/i2c_manager/include/: i2c_manager.h
components/lwip/: Kconfig  README.md
components/lwip/lwip/src/core/ipv4/: acd.c  acd.c.old
components/lwip/lwip/src/include/lwip/: acd.h
components/lwip/port/include/: lwipopts.h
components/opener/: CMakeLists.txt
components/opener/src/: opener_api.h
components/opener/src/cip/: appcontype.c  cipcommon.c  cipconnectionmanager.c  cipconnectionobject.c  cipethernetlink.c  cipidentity.c  cipioconnection.c  ciptcpipinterface.c  ciptcpipinterface.h
components/opener/src/ports/: CMakeLists.txt  generic_networkhandler.c
components/opener/src/ports/ESP32/: CMakeLists.txt  devicedata.h  opener.c
components/opener/src/ports/ESP32/kc868_a16_application/: kc868_a16_application.c
components/opener/src/ports/nvdata/: nvtcpip.c
components/pcf8574/: CMakeLists.txt  pcf8574.c
components/pcf8574/include/: pcf8574.h
components/webui/: CMakeLists.txt  README.md
components/webui/include/: webui.h  webui_api.h
components/webui/src/: webui.c  webui_api.c  webui_html.c
docs/: KC868_A16.md
eds/: KC868A16.eds  KC868A16.eds.ebf
main/: CMakeLists.txt  Kconfig.projbuild  main.c
scripts/: copy_firmware.py  generate_doxygen_docs.bat  generate_doxygen_docs.ps1
tools/: README.md  analyze_arp_timing.py  list_interfaces.py  pdml_to_markdown.py  send_conflict_arp.py  test_acd_conflict.py  test_acd_retry_timing.py
tools/WinUIEIP/: ConvertToIco.cs  EulerLink.sln  FEATURES_TO_ADD.md  README.md  RUNTIME_REQUIREMENTS.md  WebUIReadme.md  build_output.txt
tools/WinUIEIP/IconConverter/: Program.cs
tools/WinUIEIP/WinUIEIP/: App.xaml  App.xaml.cs  ETHERNET_IP_SETUP.md  EulerEIP.csproj  EulerLink.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  WinUIEIP.csproj  app.manifest
tools/WinUIEIP/WinUIEIP/Assets/: README.md
tools/WinUIEIP/WinUIEIP/Models/: AssemblyData.cs  AssemblyDisplayModels.cs  AssemblySizes.cs  ByteArrayConverter.cs  CalibrationResult.cs  DiscoveredDevice.cs  LogBufferResponse.cs  Lsm6ds3CalibrationResult.cs  McpDeviceConfig.cs  McpDeviceType.cs  McpDevicesResponse.cs  McpUpdateRate.cs  Mpu6050Status.cs  NetworkConfig.cs  OtaStatus.cs  SensorConfig.cs  SensorStatus.cs
tools/WinUIEIP/WinUIEIP/Properties/PublishProfiles/: ClickOnceProfile.pubxml
tools/WinUIEIP/WinUIEIP/Services/: DeviceApiService.cs  DeviceDiscoveryService.cs  EtherNetIPService.cs
tools/WinUIEIP/WinUIEIP/Views/: ConfigurationPage.xaml  ConfigurationPage.xaml.cs  DeviceDiscoveryDialog.xaml  DeviceDiscoveryDialog.xaml.cs  FirmwareUpdatePage.xaml  FirmwareUpdatePage.xaml.cs  InputAssemblyPage.xaml  InputAssemblyPage.xaml.cs  LogsPage.xaml  LogsPage.xaml.cs  Lsm6ds3StatusPage.xaml  Lsm6ds3StatusPage.xaml.cs  Mpu6050StatusPage.xaml  Mpu6050StatusPage.xaml.cs  OutputAssemblyPage.xaml  OutputAssemblyPage.xaml.cs
